[tool.poetry]
name = "paper-tactics"
version = "0.1.0"
description = ""
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.34.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
boto3 = "^1.20.31"
moto = {extras = ["dynamodb"], version = "^2.3.1"}
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
mypy = "^0.931"
boto3-stubs = {extras = ["dynamodb", "apigateway"], version = "^1.20.54"}
isort = "^5.10.1"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--import-mode importlib"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'def __repr__',
    '\s\.\.\.$'
]

[[tool.mypy.overrides]]
module = "moto"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
