[tool.poetry]
name = "paper-tactics"
version = "0.1.0"
description = ""
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.9"
redis = "^4.1.4"
websockets = "^10.3"
bidict = "^0.22.0"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.46.10"
black = "21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
boto3 = "^1.20.31"
moto = {extras = ["dynamodb"], version = "^2.3.1"}
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
mypy = "^0.960"
boto3-stubs = {extras = ["dynamodb", "apigateway"], version = "^1.20.54"}
isort = "^5.10.1"
fakeredis = "^1.7.1"
types-redis = "^4.1.16"
pytest-testmon = "^1.2.3"
aws-sam-cli = "^1.51.0"
Jinja2 = "2.11.3"
itsdangerous = "2.0.1"
Werkzeug = "2.0.3"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--testmon --import-mode importlib"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'def __repr__',
    '\s\.\.\.$'
]

[[tool.mypy.overrides]]
module = "moto"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fakeredis"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nest_asyncio"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
