[project]
name = "paper-tactics"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "bidict>=0.23.1",
    "nest-asyncio>=1.6.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
addopts = "--testmon"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    'def __repr__',
    '\s\.\.\.$'
]
